# roship_io

./: CITATION.cff  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: pages.yml
docs/: 1_modbus_usage.md  Doxyfile  release_cleanup_plan.md
io_interfaces/: CMakeLists.txt  package.xml
io_interfaces/msg/: RawPacket.msg
roship_io/: CMakeLists.txt  package.xml
roship_io/config/: modbus_connection.yaml  serial_connection.yaml  udp_connection.yaml
roship_io/include/roship_io/: package_defs.hpp  primitives.hpp
roship_io/include/roship_io/connection/: connection_defs.hpp  io_connection.hpp  mqtt_connection.hpp  serial_connection.hpp  udp_connection.hpp
roship_io/include/roship_io/modbus/: modbus.hpp  modbus_node.hpp
roship_io/include/roship_io/modbus/blocks/: block.hpp  modbus_primitives.hpp
roship_io/include/roship_io/transport/: asio_serial.hpp  lsp_serial.hpp  mqtt_client.hpp  transport_defs.hpp  transport_interface.hpp  trasnport_defs.hpp  udp_socket.hpp
roship_io/launch/: serial_connection.launch.xml  udp_connection.launch.xml
roship_io/nodes/: minimal_publisher.cpp  serial_connection.cpp  serial_test.cpp  udp_connection.cpp
roship_io/scripts/: test_mqtt.sh
roship_io/src/: asio_serial.cpp  lsp_serial.cpp  modbus.cpp  modbus_node.cpp  mqtt_client.cpp  mqtt_connection.cpp  serial_connection.cpp  udp_connection.cpp  udp_socket.cpp
